--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> <!-- Sửa lỗi "len" thành "lang" -->
 <head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World!</title>
+    <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
-<h1>Hello world!</h1>
-<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+    <h1>Hello, World!</h1>
+    <div>
+        <img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px">
+    </div>
+    <p>Welcome to my first Git repository! 🚀</p>
+    <p>This project is a simple demonstration of how Git works.</p>
+    
+    <h2>Understanding Merging</h2>
+    <p>This line is here to show how merging works. When working with Git, merging allows us to combine changes from different branches efficiently.</p>
+
+    <div>
+        <img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px">
+    </div>
+    
+    <p>Git helps developers collaborate and track changes easily. Let's explore more! 🔥</p>
 
 </body>
 </html>
